--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,37 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.example {
+  font-family: "Open Sans", sans-serif;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+}
+form {
+  display: flex;
+  align-items: flex-start;
+  margin-right: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+input[type="submit"] {
+  background-color: #0693cd;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.4;
+  padding: 10px;
+  width: 100px;
+  margin: 0 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 20px;
+  font-weight: bold;
+}
+.preview {
+  white-space: pre;
+}
+
+textarea {
+  border: 1.5px solid black;
+  background: #98d4f3;
 }
